# omnibioai-model-registry

./: .gitignore  ALL_PY_CODE.txt  Dockerfile  README.md  __init__.py  errors.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
audit/: audit_log.py
cli/: main.py
omnibioai_model_registry/: __init__.py  api.py  config.py  refs.py
omnibioai_model_registry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
omnibioai_model_registry/audit/: audit_log.py
omnibioai_model_registry/cli/: main.py
omnibioai_model_registry/package/: layout.py  manifest.py  validate.py
omnibioai_model_registry/service/: Dockerfile  README.md
omnibioai_model_registry/service/app/: main.py
omnibioai_model_registry/storage/: base.py  localfs.py
package/: layout.py  manifest.py
service/app/: main.py
storage/: localfs.py
tests/: test_model_registry.py  test_registry_localfs.py
